[project]
name = "hl-archive"
version = "0.1.0"
description = "Turn Hyperliquid's raw S3 lz4 dumps into clean Parquet datasets, queryable with Polars/DuckDB."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Fat Tom", email = "tomas@wrth.xyz" }
]
requires-python = ">=3.11"
keywords = ["hyperliquid", "crypto", "backtesting", "parquet", "polars", "trading", "defi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "boto3>=1.43.10",
    "lz4>=4.4.5",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "typer>=0.25.1",
]

[project.urls]
Homepage = "https://github.com/tomazzi14/hl-archive"
Repository = "https://github.com/tomazzi14/hl-archive"
Issues = "https://github.com/tomazzi14/hl-archive/issues"

[project.scripts]
hl-archive = "hl_archive.cli:app"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.13",
    "ty>=0.0.37",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line too long (formatter handles it)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.environment]
python-version = "3.11"
